--- a/css/index.css
+++ b/css/index.css
@@ -43,10 +43,71 @@ body {
   
 }
 .box {
+  display: flex;
   min-width: 1024px;
   max-width: 1920px;
   background: url("../images/logo.png") no-repeat;
   background-size: contain;
   margin:  0 auto;
   min-height: 780px;
+  
+  padding: 0 .3125rem;
+}
+.box .column {
+  margin-top: 1.5rem;
+  flex: 3;
+}
+.box .column:nth-child(2)
+{
+  flex: 4!important;
+}
+.box .column .panel {
+  position: relative;
+  border: .1875rem solid transparent;
+  border-width: .6375rem .475rem .25rem 1.65rem;
+  border-image-source: url("../images/border.png");
+  border-image-slice: 51 38 20 132;
+  
+}
+.box .column .panel .inner {
+  position: absolute;
+  top: -.6375rem;
+  left: -1.65rem;
+  right: -.475rem;
+  bottom: -.25rem;
+  
+}
+.box .column .overview {
+  height: 1.375rem;
+}
+.box .column .panel .inner ul {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: .3rem .45rem;
+}
+.box .column .panel .inner ul li {
+  flex: 1;
+}
+.box .column .panel .inner ul li h4 {
+  font-size: .35rem;
+  color: #fff;
+  margin-left: .06rem;
+  margin-bottom: .1rem;
+}
+.box .column .panel .inner ul li:nth-child(1) span {
+  font-size: .2rem;
+  color: #4c9bfd;
+}
+.box .column .panel .inner ul li:nth-child(2) span {
+  font-size: .2rem;
+  color: #6acca3;
+}
+.box .column .panel .inner ul li:nth-child(3) span {
+  font-size: .2rem;
+  color: #6acca3;
+}
+.box .column .panel .inner ul li:nth-child(4) span {
+  font-size: .2rem;
+  color: #ed3f35;
 }
