--- a/css/index.css
+++ b/css/index.css
@@ -34,12 +34,10 @@ a:hover {
 h4 {
   font-weight: 400;
 }
-html {
-  height: 100%;
-}
+
 body {
   background: url("../images/bg.jpg") no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   
 }
 .box {
@@ -68,6 +66,11 @@ body {
   border-image-source: url("../images/border.png");
   border-image-slice: 51 38 20 132;
   
+}
+.panel h3 {
+  font-size: .2rem;
+  color: #fff;
+  margin: .25rem .25rem;
 }
 .box .column .panel .inner {
   position: absolute;
@@ -110,4 +113,133 @@ body {
 .box .column .panel .inner ul li:nth-child(4) span {
   font-size: .2rem;
   color: #ed3f35;
+}
+.monitor {
+  height: 6rem;
+  margin-top: .25rem;
+}
+.monitor .inner {
+  padding: 0.3rem 0;
+  display: flex;
+  flex-direction: column;
+}
+.monitor .tabs {
+  padding: 0 0.45rem;
+  margin-bottom: 0.225rem;
+  display: flex;
+}
+.monitor .tabs a {
+  color: #1950c4;
+  font-size: 0.225rem;
+  padding: 0 0.3375rem;
+}
+.monitor .tabs a:first-child {
+  padding-left: 0;
+  border-right: 0.025rem solid #00f2f1;
+}
+.monitor .tabs a.active {
+  color: #fff;
+}
+.monitor .content {
+  flex: 1;
+  position: relative;
+  display: none;
+}
+.monitor .head {
+  display: flex;
+  justify-content: space-between;
+  line-height: 1.05;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 0.15rem 0.45rem;
+  color: #68d8fe;
+  font-size: 0.175rem;
+}
+.monitor .marquee-view {
+  position: absolute;
+  top: 0.5rem;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  
+}
+.monitor .marquee-view .marquee {
+  animation: move 15s linear infinite;
+}
+.monitor .marquee-view .marquee:hover {
+  animation-play-state: paused;
+}
+.monitor .row {
+  display: flex;
+  justify-content: space-between;
+  line-height: 1.05;
+  font-size: 0.15rem;
+  color: #61a8ff;
+  padding: 0.15rem 0.45rem;
+}
+.monitor .row .icon-dot {
+  position: absolute;
+  left: 0.2rem;
+  opacity: 0;
+}
+.monitor .row:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #68d8fe;
+}
+.monitor .row:hover .icon-dot {
+  opacity: 1;
+}
+.monitor .col:first-child {
+  width: 1rem;
+}
+.monitor .col:nth-child(2) {
+  width: 2.5rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.monitor .col:nth-child(3) {
+  width: 1rem;
+}
+@keyframes move {
+  0% {
+
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+.point {
+  margin-top: .25rem;
+  height: 4.25rem;
+  
+}
+.point .chart {
+  display: flex;
+  margin-top: 0.3rem;
+  justify-content: space-between;
+}
+.point .pie {
+  width: 3.9rem;
+  height: 3rem;
+  margin-left: -0.125rem;
+}
+.point .data {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 2.1rem;
+  padding: 0.45rem 0.375rem;
+  box-sizing: border-box;
+  background-image: url(../images/rect.png);
+  background-size: cover;
+}
+.point h4 {
+  margin-bottom: 0.15rem;
+  font-size: 0.35rem;
+  color: #fff;
+}
+.point span {
+  display: block;
+  color: #4c9bfd;
+  font-size: 0.2rem;
 }
